--- a/.gitignore
+++ b/.gitignore
@@ -251,6 +251,8 @@ paket-files/
 .idea/
 *.sln.iml
 
+# Install package directories
+install/chocolatey/git-diff-xlsx/tools
 !install/deb/git-diff-xlsx/usr/bin/
 install/deb/*.deb
 install/deb/git-diff-xlsx/usr/lib/
