.exe now uses custom icon

--- a/src/git-diff-xlsx/git-diff-xlsx.csproj
+++ b/src/git-diff-xlsx/git-diff-xlsx.csproj
@@ -8,8 +8,9 @@
     <Product>git-diff-xlsx</Product>
     <Company>Summerhouse Software Limited</Company>
     <Copyright>Copyright © Summerhouse Software 2016-2020</Copyright>
-    <AssemblyVersion>0.0.1.0</AssemblyVersion>
-    <Version>0.0.1</Version>
+    <AssemblyVersion>0.0.2.0</AssemblyVersion>
+    <Version>0.0.2</Version>
+    <ApplicationIcon>..\..\icon\diff-icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
